--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allprojects {
         mavenLocal()
         mavenCentral()
         google()
+        mavenCentral()
         gradlePluginPortal()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
