--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,6 +30,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dependencies {
+        implementation 'com.google.android.gms:play-services-ads:23.1.0'
+    }
 }
 
 
