--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,7 @@ android {
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -31,7 +32,7 @@ android {
         }
     }
     dependencies {
-        implementation 'com.google.android.gms:play-services-ads:23.1.0'
+        implementation 'com.google.android.gms:play-services-ads:22.6.0'
     }
 }
 
